fixed marque overflow on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -75,7 +75,7 @@ section.contact {
     padding-top: 4rem;
   }
   .marqueWrapper {
-    max-width: 100vw;
+    max-width: 90vw;
   }
 
   .cta {
