--- a/src/components/ui/sidebar/sidebar.module.css
+++ b/src/components/ui/sidebar/sidebar.module.css
@@ -56,6 +56,6 @@
     width: 100%;
     padding: 0rem 1rem;
     background-color: var(--background);
-    top: 4rem;
+    top: 6rem;
   }
 }
